--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "publish": true
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@opennextjs/cloudflare": "1.3.0",
     "next": "15.3.3",
+    "next-sanity": "^10.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
